# docker-on-steroids

./: Dockerfile.1  Dockerfile.2  Dockerfile.3  Dockerfile.3.2  pyproject.toml  test_simple.py
.github/workflows/: docker-image.yml
dockerfiles/: Dockerfile  Dockerfile.1  Dockerfile.3  Dockerfile.3.1  Dockerfile.3.2  Dockerfile.4  Dockerfile.4.1  Dockerfile.5  Dockerfile.5.1  Dockerfile.5.2  Dockerfile.6  Dockerfile.7  Dockerfile.7.1
