[tool.poetry]
name = "docker-on-steroids"
version = "0.1.0"
description = ""
authors = ["Ilja Bauer <ilja@entwicklerheld.de>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
docker-database-url = "~1.1.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "entwicklerheld"
url = "https://entwicklerheld.jfrog.io/artifactory/api/pypi/default-pypi/simple"
secondary = true